# sprout

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.postgres.yml  docker-compose.yml
.github/workflows/: ci.yml
.superpowers/sdd/: fix-batch1-report.md  simplify-fixes-report.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3410f3212aec_add_ratecacheentry_table.py  a1n0t1f1cat0_add_notifications.py  c18c6c73309d_baseline_schema.py  c31530b8db05_loan_schedules.py  d4e7a1c9f2b8_index_occurrence_sprout_id.py
backend/app/: bean_format.py  bean_parse.py  config.py  db.py  due_engine.py  exchange_rates.py  ledger.py  loan.py  main.py  models.py  postings.py  services.py  writer.py
backend/app/notify/: channels.py  reminders.py  scheduler.py
backend/app/routers/: exchange_rates.py  history.py  inbox.py  loans.py  meta.py  schedules.py
backend/tests/: conftest.py  test_api.py  test_bean_format.py  test_bean_parse.py  test_db.py  test_due_engine.py  test_exchange_rates.py  test_history.py  test_ledger.py  test_lifespan.py  test_loan.py  test_notifications_migration.py  test_notify_channels.py  test_notify_reminders.py  test_notify_scheduler.py  test_postings.py  test_services.py  test_static.py  test_writer.py
backend/tests/fixtures/: demo.bean
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/scripts/: generate-icons.mjs
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx
frontend/src/api/: client.test.ts  (+5 more)
(+48 files in other folders)
