[project]
name = "sprout-backend"
version = "0.1.0"
description = "Sprout — recurring-payments automation for Beancount"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.22",
    "beancount>=3.2",
    "beanfmt>=0.8",
    "python-dateutil>=2.9",
    "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
